tests/samples/valid/bitshift_type_inference.pn
fn main() -> i32
{
	var x = 1 << 8;
	return: x - 56
}
