tests/samples/invalid/loop_nonfinal.pn
fn main() -> i32
{
	var x = 33;

	{
		x = x + 1;
		loop;
		x = 0;
	}

	return: x
}
